--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "ccsum"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/sevenc-nanashi/ccsum"
+description = "Convenient Checksum Utility"
+readme = "README.md"
+keywords = ["checksum", "hash", "utility", "cli"]
+categories = ["command-line-utilities"]
+authors = ["sevenc-nanashi"]
 
 [dependencies]
 anyhow = "1.0.95"
