perf: implement stream hashing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ authors = ["sevenc-nanashi"]
 
 [dependencies]
 anyhow = "1.0.95"
-clap = { version = "4.5.26", features = ["derive"] }
+clap = { version = "4.5.26", features = ["derive", "env"] }
 clap_complete = "4.5.42"
 colored = "3.0.0"
 duplicate = "2.0.0"
