chore: better wildcard for windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha1 = "0.10.6"
 sha2 = "0.10.8"
 strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "2.0.11"
+wild = "2.2.1"
 xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64", "xxh3"] }
 
 [dev-dependencies]
